--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/valorant.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
-    <title>Valorant | API</title>
+    <title>Valorant | API | Weapons</title>
   </head>
   <body>
     <header id="header"></header>
